--- a/css/cssGeneral.css
+++ b/css/cssGeneral.css
@@ -1,22 +1,43 @@
-
-
 /* Style de base pour la page*/
 html{
   font:11px Arial, Helvetica, sans-serif;
-  color: #555;
+  color:#2C2A2A;
+	background-color: #4A4A4A;
+	background-image: url('img/background.gif');
+	background-position: top;
+	background-repeat: repeat-x;
+	padding: 0;
+	margin: 0;
 }
 
-.body 
+body 
 {
-  background-color:#FFF;
+	width: 960px;
+	border: 3px solid #1E1D1D;
+	background-color: #fff;
+	padding-left: 5px;
+	padding-right: 5px;
+	margin-left: auto; 
+	margin-right: auto; 
+	background-image: url('img/background_head.png');
+	background-position: top;
+	background-repeat: repeat-x;
+	min-height: 600px;
 }
 
 /* Style pour les titre */
-h1, h2
+h1, h2, h3 { 
+	font-family: 'MEgalopolisExtraRegular', 'lucida grande', sans-serif; 
+}
+
+h1
 {
-  background-color:orange;
-  font-size:30px ;
-  text-align:center;
+	font-size: 32px ;
+	text-align:center;
+	text-transform: uppercase;
+	margin-top: 4px;
+	margin-bottom: 4px;
+	color: #ED7020;
 } 
 h2
 {
@@ -34,47 +55,51 @@ p a:hover {
 	border-bottom: none;
 }
 
-/* Style pour le texte de la page d'accueil (couleur : bleu foncé avec mise en
-gras et en italique) */
 #corps
 {
-   font-size:14px;
-   margin-left: 180px;
-   padding: 10px;
-   border: 1px solid #777;
+	font-size:14px;
+	margin-left: 190px;
+	padding: 10px;
+	border: 1px solid #777;
+	background-image: url('img/background_corps.gif');
+	background-position: top;
+	background-repeat: repeat-x;
 }
 
 /* STYLES POUR LE MENU ET LE CENTRE */
-/* Style des blocs contenant les éléments de menu : fond bleu ciel, épaisseur 
-1px, espacement de 3x entre la bordure gauche  et texte gauche */
-
 .gauche {
 float: left; 
 top:expression(documentElement.scrollTop+body.scrollTop);
-width: 160px;
-border-bottom:1px solid #777777;
-border-right:1px solid #777777;
-border-left:10px solid #777777;
-border-top:1px solid #777777;
+width: 180px;
+border-right: 1px dashed #636262;
 text-align:left;
+padding: 0 ;
+margin: 0;
 }
 
 .menugauche {
 list-style-type: none;
-margin: 1px 1px 0px 1px;
-padding:1px 10px 1px 5px ;
-font-size:12px ;
+margin: 3px 0px 0px 0px;
+padding:1px 5px 1px 5px ;
+font-size:15px ;
 }
 
 .menugauche li a{
 	display: block;
-	background-color : #ccc;
-	margin-bottom: 3px;
-	color: #000;
+	background-color : #fff;
+	margin: 0px 0px 3px 0px;
+	border-top: 1px dashed #636262;
 	text-decoration: none;
+	font-family:  'DaysRegular', 'Lucida Grande', sans-serif;
+}
+.menugauche li:first-child a{
+	border-top: none;
 }
 .menugauche li a:hover{
-	background-color: #555;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	text-align: center;
+	font-size: 16px;
 }
 
 /* STYLES POUR LES TABLEAUX QUADRILLÉS */
@@ -141,4 +166,46 @@ table.tabNonQuadrille tr td
 /* Styles persos */
 .hide {
 	display: none;
+}
+
+a {
+color: inherit;
+text-decoration: none;
+}
+
+/*Polices personalisées*/
+@font-face {
+    font-family: 'ChunkFiveRegular';
+    src: url('font/Chunkfive-webfont.ttf');
+    src: url('font/Chunkfive-webfont.eot?#iefix') format('eot'),
+         url('font/Chunkfive-webfont.woff') format('woff'),
+         url('font/Chunkfive-webfont.ttf') format('truetype'),
+         url('font/Chunkfive-webfont.svg#webfont90E2uSjN') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'MEgalopolisExtraRegular';
+    src: url('font/megalopolisextra-webfont.eot');
+    src: url('font/megalopolisextra-webfont.eot?#iefix') format('eot'),
+         url('font/megalopolisextra-webfont.woff') format('woff'),
+         url('font/megalopolisextra-webfont.ttf') format('truetype'),
+         url('font/megalopolisextra-webfont.svg#webfontBIhK5wcN') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'DaysRegular';
+    src: url('font/Days-webfont.eot');
+    src: url('font/Days-webfont.eot?#iefix') format('eot'),
+         url('font/Days-webfont.woff') format('woff'),
+         url('font/Days-webfont.ttf') format('truetype'),
+         url('font/Days-webfont.svg#webfontGArtEygD') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
