--- a/css/cssGeneral.css
+++ b/css/cssGeneral.css
@@ -39,9 +39,13 @@ h1
 	margin-bottom: 4px;
 	color: #ED7020;
 } 
+h1:hover {
+	letter-spacing: 5px;
+}
 h2
 {
   font-size:20px ;
+  margin-top:0;
 }
 h5
 {
@@ -90,7 +94,7 @@ font-size:15px ;
 	margin: 0px 0px 3px 0px;
 	border-top: 1px dashed #636262;
 	text-decoration: none;
-	font-family:  'DaysRegular', 'Lucida Grande', sans-serif;
+	font-family:  'MEgalopolisExtraRegular', 'Lucida Grande', sans-serif;
 }
 .menugauche li:first-child a{
 	border-top: none;
@@ -100,6 +104,8 @@ font-size:15px ;
 	padding-bottom: 15px;
 	text-align: center;
 	font-size: 16px;
+	letter spacing: 1px;
+	line-height: 150%;
 }
 
 /* STYLES POUR LES TABLEAUX QUADRILLÉS */
@@ -172,19 +178,16 @@ a {
 color: inherit;
 text-decoration: none;
 }
-
-/*Polices personalisées*/
-@font-face {
-    font-family: 'ChunkFiveRegular';
-    src: url('font/Chunkfive-webfont.ttf');
-    src: url('font/Chunkfive-webfont.eot?#iefix') format('eot'),
-         url('font/Chunkfive-webfont.woff') format('woff'),
-         url('font/Chunkfive-webfont.ttf') format('truetype'),
-         url('font/Chunkfive-webfont.svg#webfont90E2uSjN') format('svg');
-    font-weight: normal;
-    font-style: normal;
+#corps a {
+border-bottom: 1px dashed #2C2A2A;
+font-style:italic;
+}
+#corps a:hover {
+border-bottom: 1px solid #2C2A2A;
+font-style:normal;
 }
 
+/*Polices personalisées*/
 
 @font-face {
     font-family: 'MEgalopolisExtraRegular';
@@ -193,18 +196,6 @@ text-decoration: none;
          url('font/megalopolisextra-webfont.woff') format('woff'),
          url('font/megalopolisextra-webfont.ttf') format('truetype'),
          url('font/megalopolisextra-webfont.svg#webfontBIhK5wcN') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'DaysRegular';
-    src: url('font/Days-webfont.eot');
-    src: url('font/Days-webfont.eot?#iefix') format('eot'),
-         url('font/Days-webfont.woff') format('woff'),
-         url('font/Days-webfont.ttf') format('truetype'),
-         url('font/Days-webfont.svg#webfontGArtEygD') format('svg');
     font-weight: normal;
     font-style: normal;
 
